data/derived/fa15/progs/unify/prog3279.ml.out
Characters 70-74:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'c
       The type variable 'c occurs inside 'a -> 'b -> 'c
